--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">pHeart</string>
 
     <string name="screen_name_home">Home</string>
-    <string name="screen_name_measurements">Measurements</string>
+    <string name="screen_name_all_measurements">All measurements</string>
     <string name="screen_name_add_measurement">Add measurement</string>
     <string name="screen_name_profile">Profile</string>
     <string name="screen_name_preferences">Preferences</string>
