--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="bpm_unit">BPM</string>
     <string name="compare_last_week_average">compared to last 7 days</string>
     <string name="compare_yesterday_average">compared to yesterday\'s average</string>
+    <string name="compare_to_average_no_value">N/A</string>
 </resources>
