:sparkles: Add button to abort measurement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="measurement_duration_prompt">How long do you want to measure?</string>
     <string name="measurement_duration_prompt_subtitle">Longer measurements are more precise.</string>
     <string name="button_start_measurement">Start</string>
+    <string name="button_abort_measurement">Abort</string>
     <string name="button_redo_measurement">Redo</string>
     <string name="button_save_measurement">Save</string>
     <string name="toast_warning_measurement_cancelled">Measurement was cancelled, please keep the screen open while measuring.</string>
