:sparkles: Implement heart rate calculation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="measurement_duration_prompt">How long do you want to measure?</string>
     <string name="measurement_duration_prompt_subtitle">Longer measurements are more precise.</string>
     <string name="button_start_measurement">Start</string>
+    <string name="measurement_state_get_ready">Get ready</string>
+    <string name="measurement_state_measuring">Measuring</string>
+    <string name="measurement_state_complete">Complete</string>
     <string name="button_abort_measurement">Abort</string>
     <string name="button_redo_measurement">Redo</string>
     <string name="button_save_measurement">Save</string>
